--- a/limu/李沐课程环境搭建.md
+++ b/limu/李沐课程环境搭建.md
@@ -92,6 +92,6 @@ pip install jupyter
 pip install d2l pandas==1.5.3
 ```
 
-<img src="/Users/pengzexue/Library/Application Support/typora-user-images/image-20241111205328501.png" style="zoom:80%;" />
+<img src="https://raw.githubusercontent.com/xuepengze/Experiment/main/main/limu/picture/image-20241111205328501.png" style="zoom:80%;" />
 
 后续再安装一些缺少的库便可继续学习。
